sass categorization and few elements to try sass functionality made

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 </head>
 <body>
   <div class="wrapper">
-    <header></header>
+    <header>
+      <ul class="user">
+        <li><span>Авторизация</span></li>
+        <li><span>Регистрация</span></li>
+      </ul>
+
+      <div class="shop-phone">8 (093) 278 92 92</div>
+    </header>
 
     <div class="banner"></div>
 
