--- a/index.html
+++ b/index.html
@@ -10,12 +10,45 @@
 <body>
   <div class="wrapper">
     <header>
-      <ul class="user">
-        <li><span>Авторизация</span></li>
-        <li><span>Регистрация</span></li>
-      </ul>
+      <div class="flex-container">
+        <div class="inner-container">
+          <ul>
+            <li><span>Авторизация</span></li>
+            <li><span>Регистрация</span></li>
+          </ul>
+          <div class="phone">8 (093) 000 00 00</div>
+        </div>
 
-      <div class="shop-phone">8 (093) 278 92 92</div>
+        <div class="search">
+          <input type="text" />
+          <button>Поиск</button>
+        </div>
+      </div>
+
+      <nav>
+        <ul>
+          <li><a href="#">Fitabolic</a></li>
+          <li><a href="#">Главная</a></li>
+          <li><a href="#">Каталог</a></li>
+          <li><a href="#">Статьи</a></li>
+          <li><a href="#">Как выбрать</a></li>
+          <li><a href="#">Производители</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Оплата</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+
+      <div class="sportsman"></div>
+
+      <div class="basket ">
+        <a href="#">Корзина</a>
+      </div>
+
+      <div class="logo-bg"></div>
+
+      <img src="./img/logo-fitabolic.png" alt="Fitabolic logo" class="logo">
+      <div class="logo"></div>
     </header>
 
     <div class="banner"></div>
