banner made (my first slider)

--- a/index.html
+++ b/index.html
@@ -51,7 +51,30 @@
       <div class="logo"></div>
     </header>
 
-    <div class="banner"></div>
+    <div class="banner-wrapper">
+      <div class="banner">
+        <div id="banner-flex-container">
+          <div class="slide-1">
+            <div class="strongman"></div>
+            <div class="what-for"></div>
+            <div class="photo"></div>
+          </div>
+          <div class="slide-2">
+            <div class="strongman"></div>
+            <div class="what-for"></div>
+            <div class="photo"></div>
+          </div>
+          <div class="slide-3">
+            <div class="strongman"></div>
+            <div class="what-for"></div>
+            <div class="photo"></div>
+          </div>
+        </div>
+      </div>
+
+      <div id="prev-button"></div>
+      <div id="next-button"></div>
+    </div>
 
     <div class="content">
       <div class="goods"></div>
@@ -63,5 +86,7 @@
 
     <footer></footer>
   </div>
+  
+  <script src="./js/main.js"></script>
 </body>
 </html>
