carousel made (my first experience with carousel)

--- a/index.html
+++ b/index.html
@@ -69,11 +69,16 @@
             <div class="what-for"></div>
             <div class="photo"></div>
           </div>
+          <div class="slide-4">
+            <div class="strongman"></div>
+            <div class="what-for"></div>
+            <div class="photo"></div>
+          </div>
         </div>
-      </div>
+      </div>       
 
-      <div id="prev-button"></div>
-      <div id="next-button"></div>
+      <div id="prev-button" class="button-muted"></div>
+      <div id="next-button" class="button-active"></div>
     </div>
 
     <div class="content">
